--- a/shishi-jingguo-yu-gongkaixin-shijianxian/youjian-zhi-meiguo-qingbao-youhao-mcdonalds-yindu-2019-08/index.html
+++ b/shishi-jingguo-yu-gongkaixin-shijianxian/youjian-zhi-meiguo-qingbao-youhao-mcdonalds-yindu-2019-08/index.html
@@ -358,7 +358,7 @@ a:active {
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a><br>
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a><br>
 
 
  
