--- a/shishi-jingguo-yu-gongkaixin-shijianxian/beijing-zhi-ming-wei-xian-pierre-mirochnikoff-gong-kai-xin-2025-04-19/index.html
+++ b/shishi-jingguo-yu-gongkaixin-shijianxian/beijing-zhi-ming-wei-xian-pierre-mirochnikoff-gong-kai-xin-2025-04-19/index.html
@@ -358,7 +358,7 @@ a:active {
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a><br>
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a><br>
 
 
  
@@ -481,7 +481,7 @@ Yves Strickler,
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a>, 
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a>, 
 
  
  
@@ -544,7 +544,7 @@ Yves Strickler,
 
 
 
-<a href="https://zh.ecthrwatch.org/zuozhe/lu-shengqiao/">Vincent Le Corre（陆圣乔）</a>, 
+<a href="https://www.lushengqiao.com">Vincent Le Corre（陆圣乔）</a>, 
 
  
  
